Stylesheet: Fixed white gaps between buttons
Prevented spaces from having rounded edges.

--- a/assets/stylesheet.css
+++ b/assets/stylesheet.css
@@ -6,6 +6,9 @@
 	-fx-pref-width:  50px;
 	-fx-max-height:  50px;
 	-fx-max-width:   50px;
+	
+	/* prevent rounded buttons */
+	-fx-background-radius: 0em;
 }
 
 .chess-space-light {
